--- a/debug.ipynb
+++ b/debug.ipynb
@@ -2,11 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "from models.discriminator import Discriminator\n",
-    "import torch"
+    "import torch\n",
+    "from dataset.custom_dataset import ImageFolderRemapPair\n",
+    "from dataset.datasetgetter import Compose\n",
+    "from torchvision import transforms\n",
+    "from torch import nn"
    ],
    "metadata": {
     "collapsed": false,
@@ -17,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "outputs": [],
    "source": [
     "img_size = 80\n",
@@ -36,11 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "outputs": [],
    "source": [
-    "batch_size = 32\n",
-    "x = torch.rand(batch_size, input_ch, img_size, img_size)"
+    "# batch_size = 32\n",
+    "# x = torch.rand(batch_size, input_ch, img_size, img_size)\n",
+    "# out = D(x)\n",
+    "# print(out.shape)"
    ],
    "metadata": {
     "collapsed": false,
@@ -51,19 +57,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
+   "outputs": [],
+   "source": [
+    "img_dir = '../refined-fonts-images'\n",
+    "mean = [0.5]\n",
+    "std = [0.5]\n",
+    "normalize = transforms.Normalize(mean=mean, std=std)\n",
+    "img_size = 80\n",
+    "transform = Compose([transforms.Resize((img_size, img_size)),\n",
+    "                         transforms.ToTensor(),\n",
+    "                         normalize])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [],
+   "source": [
+    "dataset = ImageFolderRemapPair(root=img_dir, transform=transform, input_ch=1, pair_size=2)\n",
+    "data_loader = torch.utils.data.DataLoader(\n",
+    "    dataset,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    num_workers=8,\n",
+    "    pin_memory=True,\n",
+    "    drop_last=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "outputs": [],
+   "source": [
+    "it = iter(data_loader)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([32, 2, 80, 80]) torch.Size([32, 2]) torch.Size([32, 2])\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, y, cnt_idx = next(it)\n",
+    "print(x.shape, y.shape, cnt_idx.shape)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "outputs": [
     {
      "data": {
-      "text/plain": "torch.Size([32, 2, 80, 80])"
+      "text/plain": "torch.Size([32, 2])"
      },
-     "execution_count": 17,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x.shape"
+    "y.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [],
+   "source": [
+    "out = D(x)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "outputs": [],
+   "source": [
+    "sig_out = nn.Sigmoid()(out)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([32, 1])"
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sig_out.shape"
    ],
    "metadata": {
     "collapsed": false,
@@ -75,18 +211,344 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "random_idx = torch.randperm(x.size(0))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "random_x = x[random_idx]\n",
+    "random_x[:, 1] = x[:, 1]\n",
+    "random_y = y[random_idx]\n",
+    "random_y[:, 1] = y[:, 1]\n",
+    "random_cnt_idx = cnt_idx[random_idx]\n",
+    "random_cnt_idx[:, 1] = cnt_idx[:, 1]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([32, 1])\n"
-     ]
+     "data": {
+      "text/plain": "torch.Size([32, 2, 80, 80])"
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "out = D(x)\n",
-    "print(out.shape)"
+    "random_x.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([64, 2, 80, 80])"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cat([x, random_x], dim=0).shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([32, 2, 80, 80])"
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "random_x.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor(True)"
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.all(random_x[0][1] == x[0][1])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor(True)"
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.all(random_x[0][0] == x[12][0])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "outputs": [],
+   "source": [
+    "out = D(x)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([32, 1])"
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "def calc_loss(out, y):\n",
+    "\n",
+    "    # font_idxが一致している組は1, 一致していない組は-1\n",
+    "    sign = (y[:, 0] == y[:, 1])\n",
+    "    sign = torch.tensor([1 if s else -1 for s in sign], dtype=torch.float32)\n",
+    "\n",
+    "    loss = torch.mean(sign.unsqueeze(1) * out)\n",
+    "    return loss"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor(True)"
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.all(y)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "outputs": [],
+   "source": [
+    "sign = (random_y[:, 0] == random_y[:, 1])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "outputs": [],
+   "source": [
+    "sign = torch.tensor([1 if s else -1 for s in sign], dtype=torch.float32)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor(-1.4866, grad_fn=<MeanBackward0>)"
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.mean(sign.unsqueeze(1) * out)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "torch.Size([32, 1])"
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[1.3956],\n        [1.7156],\n        [1.9651],\n        [1.8570],\n        [1.3355],\n        [1.0874],\n        [1.6182],\n        [2.2699],\n        [0.8188],\n        [1.1244],\n        [2.2237],\n        [2.0436],\n        [2.4727],\n        [1.8845],\n        [1.8654],\n        [1.8384],\n        [1.2894],\n        [2.1024],\n        [1.3503],\n        [1.9459],\n        [1.0656],\n        [2.2472],\n        [1.6408],\n        [1.6102],\n        [1.2900],\n        [1.4292],\n        [2.1773],\n        [3.2771],\n        [1.2474],\n        [1.2068],\n        [2.2223],\n        [0.9582]], grad_fn=<ViewBackward0>)"
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<function dataset.custom_dataset.default_loader(path, input_ch=3)>"
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.loader"
    ],
    "metadata": {
     "collapsed": false,
